--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mysql": "^2.18.1",
-    "typeorm": "^0.3.12"
+    "mysql2": "^3.2.0",
+    "sequelize": "^6.29.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
