--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev src"
+    "dev": "ts-node-dev src",
+    "swagger-autogen": "ts-node src/swagger/swagger.ts"
   },
   "repository": {
     "type": "git",
@@ -23,13 +24,16 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.2"
+    "mongoose": "^7.0.2",
+    "swagger-autogen": "^2.23.1",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
   }
