--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
+    "multer": "^1.4.5-lts.1",
     "swagger-autogen": "^2.23.1",
     "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
