--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ URI =
 JWT_SECRET = 
 
 SEND_TO_DRIVE = 
+
+
+GOOGLE_DRIVE_CLIENT_ID = 
+GOOGLE_DRIVE_CLIENT_SECRET = 
+GOOGLE_DRIVE_REDIRECT_URI = 
+GOOGLE_DRIVE_REFRESH_TOKEN = 
