--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.2",
     "multer": "^1.4.5-lts.1",
@@ -30,11 +31,11 @@
     "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.7",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/swagger-ui-express": "^4.1.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0"
